# Chiron-Rising

./: .gitignore  README.md  SMAC_REFERENCE.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/audio/: soundSystem.ts  voiceSystem.ts
src/components/: DiplomacyScreen.tsx  HexMap.tsx  InfoPanel.tsx  TurnPrompts.tsx
src/game/: aiOpponent.ts  gameState.ts  hexMap.ts  socialEngineering.ts  techTree.ts  unitAutomation.ts
src/llm/: factionPersonalities.ts  llmClient.ts
