[package]
name = "chiron-rising"
version = "0.1.0"
description = "A 4X strategy game inspired by Alpha Centauri"
authors = ["VELLE"]
edition = "2021"

[lib]
name = "chiron_rising_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
